--- a/client/src/app/components/stardust/TruncatedId.scss
+++ b/client/src/app/components/stardust/TruncatedId.scss
@@ -1,6 +1,6 @@
 .truncated-id {
+    width: 100%;
     span {
-        width: 100px;
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
